# github-trend-radar

./: .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GitHubTrendRadar.iss  GitSonar.iss  GitSonar.pyw  LICENSE  PLANS.md  README.md  README.zh-CN.md  TASKS.md  app_runtime.py  build_all_click.cmd  build_exe.ps1  build_setup.ps1  github-恢复代码.txt  pyproject.toml  requirements.txt  runtime_http.py  runtime_ui.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BUILD.md  CODEMAP.md  FAQ.md  MAINTENANCE.md  PROGRESS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  SECURITY.md
docs/plans/: 0001-codex-guidance-docs.md  (+43 more)
packaging/: GitSonar.iss
scripts/: build_all_click.cmd  build_exe.ps1  build_setup.ps1  verify_runtime.py  write_release_manifest.ps1
src/: GitSonar.pyw
tests/: test_discovery_clusters.py  test_discovery_jobs.py  test_discovery_profiles.py  test_github_star_sync.py  test_import_side_effects.py  test_release_manifest_script.py  test_runtime_api_boundary.py  test_runtime_app.py  test_runtime_detail_cache.py  test_runtime_diagnostics.py  test_runtime_github_exports.py  test_runtime_http.py  test_runtime_jobs.py  test_runtime_paths.py  test_runtime_settings.py  test_runtime_state.py  test_runtime_translation.py  test_runtime_ui_analysis_export.py  test_runtime_ui_assets.py  test_runtime_ui_js_contract.py  test_runtime_utils.py  test_sqlite_migration.py  test_startup_runtime.py  test_ui_js_smoke.py
(+64 files in other folders)
